# allauth.nix

./: .gitignore  LICENSE  README.md  flake.nix  outputs.nix  pyproject.toml
dev/: flake.nix
modules/: allauth.nix  aspect.nix  default.nix  devShell.nix  flake-parts.nix  flakeModule.nix  flakeModules.nix  host.nix  options.nix  perSystem.nix
modules/add-ons/: default.nix  discord.nix  plugin-apps.nix
modules/aspects/: base.nix  config.nix  default.nix  den.nix  secrets.nix  storage.nix  user.nix  web.nix
modules/lib/: base.nix  cli.nix  default.nix  devShell.nix  overrides.nix  secrets.nix  storage.nix  venv.nix  web.nix
modules/options/: default.nix  discord.nix  plugins.nix
modules/plugins/: teamspeak3.nix
modules/services/: discord.nix
modules/system/: app.nix  base.nix  default.nix  secrets.nix  storage.nix  user.nix  web.nix
nix/: allauth.nix  default.nix  dev.nix  devShells.nix  flake-parts.nix  flakeModules.nix  host.nix  options.nix  perSystem.nix
nix/app/: default.nix  lib.nix  overlay.nix  venv.nix
nix/aspects/: allauth.nix  base.nix  default.nix  secrets.nix  storage.nix  web.nix
nix/lib/: appPkgs.nix  default.nix  den-host.nix  nixos-system.nix  overlay.nix
nix/modules/: den.nix  venv.nix
nix/plugins/: default.nix
src/allauth/: __init__.py  addons.py  celery.py  defaults.py  runner.py  settings.py  wsgi.py
src/allauth_lib/: __init__.py  celery.py  runner.py
