[project]
name = "allauth"
version = "0.1.0"
description = "Alliance auth configuration library"
requires-python = ">=3.10,<3.15"
dependencies = ["allianceauth==5.1.4", "celery>5.6,<6", "gunicorn>23"]

[project.scripts]
aa = "allauth.runner:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"
